[gd_scene load_steps=9 format=3 uid="uid://du58fd4rpmw62"]

[ext_resource type="Script" uid="uid://3ehg8sbstnu3" path="res://Scripts/level_up_screen.gd" id="1_j82rw"]
[ext_resource type="Script" uid="uid://bmmbiuub1mhi0" path="res://Scripts/weapon.gd" id="2_1t0d7"]
[ext_resource type="Resource" uid="uid://d23ist2xggh" path="res://Resources/Weapons/digital_pen.tres" id="3_1db3c"]
[ext_resource type="Resource" uid="uid://bbqb1ue8roycx" path="res://Resources/Weapons/electric_guitar.tres" id="4_x5jup"]
[ext_resource type="Resource" uid="uid://cejciodf0ukwx" path="res://Resources/Weapons/hacking_device.tres" id="5_0q01g"]
[ext_resource type="Resource" uid="uid://ckdgycnmc2r0l" path="res://Resources/Weapons/handheld_camera.tres" id="6_yatqe"]
[ext_resource type="Resource" uid="uid://plawk5072io3" path="res://Resources/Weapons/hyper_mega_super_blaster.tres" id="7_ngs35"]
[ext_resource type="Resource" uid="uid://bvbcs4m3rnwad" path="res://Resources/Weapons/toy_gun.tres" id="8_nsgq5"]

[node name="LevelUpScreen" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j82rw")
weapons = Array[ExtResource("2_1t0d7")]([ExtResource("3_1db3c"), ExtResource("4_x5jup"), ExtResource("5_0q01g"), ExtResource("6_yatqe"), ExtResource("7_ngs35"), ExtResource("8_nsgq5")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_right = 0.57000005
anchor_bottom = 1.0
offset_left = 0.2999878
offset_right = -0.30004883
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Leveled up!"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Weapon1" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="Weapon2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="Weapon3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Weapon1" to="." method="_on_weapon_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Weapon2" to="." method="_on_weapon_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Weapon3" to="." method="_on_weapon_3_pressed"]
